--- a/Practica01/Practica01/Views/Person/Index.cshtml
+++ b/Practica01/Practica01/Views/Person/Index.cshtml
@@ -14,3 +14,41 @@
     </div>
 </form>
 
+<table class="table table-dark table-hover">
+    <thead>
+        <tr>
+            <th>
+                Name
+            </th>
+            <th>
+                DPI
+            </th>
+            <th>
+                Datebirth
+            </th>
+            <th>
+                Address
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.TreeList)
+        {
+            <tr>
+                <td name ="username">
+                    @Html.DisplayFor(modelItem => item.name)
+                </td>
+                <td name ="userdpi">
+                    @Html.DisplayFor(modelItem => item.dpi)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.datebirth)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.address)
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
