--- a/Practica01/Practica01/Views/Person/Index.cshtml
+++ b/Practica01/Practica01/Views/Person/Index.cshtml
@@ -5,50 +5,61 @@
     ViewData["Title"] = "Index";
 }
 
-<h1 class="black">Filtros de búsqueda</h1>
+<h4 class="black">Filtros de búsqueda</h4>
 
-<form asp-action="BuscarNombre" method="post">
+<form asp-action="Search" method="post">
     <div class="input-group input-group-lg">
-        <input type="type" name="name" value="" />
-        <button class="btn btn-outline-dark black">Buscar nombre</button>
+        <input type="type" name="dpi" value="" />
+        <button class="btn btn-outline-dark black">Buscar DPI</button>
     </div>
 </form>
 
-<table class="table table-dark table-hover">
-    <thead>
-        <tr>
-            <th>
-                Name
-            </th>
-            <th>
-                DPI
-            </th>
-            <th>
-                Datebirth
-            </th>
-            <th>
-                Address
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.TreeList)
-        {
+@if (Model.TreeList.Count != 0)
+{
+
+    <table class="table table-dark table-hover">
+        <thead>
             <tr>
-                <td name ="username">
-                    @Html.DisplayFor(modelItem => item.name)
-                </td>
-                <td name ="userdpi">
-                    @Html.DisplayFor(modelItem => item.dpi)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.datebirth)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.address)
-                </td>
+                <th>
+                    Name
+                </th>
+                <th>
+                    DPI
+                </th>
+                <th>
+                    Datebirth
+                </th>
+                <th>
+                    Address
+                </th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.TreeList)
+            {
+                <tr>
+                    <td name="name">
+                        @Html.DisplayFor(modelItem => item.name)
+                    </td>
+                    <td name="dpi">
+                        @Html.DisplayFor(modelItem => item.dpi)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.datebirth)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.address)
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <div style="text-align:center">
+        <label>Aún no hay registros.</label>
+        <br>
+    </div>
+}
